fix(styles): fix letter-spacing

--- a/styles/base.styl
+++ b/styles/base.styl
@@ -14,7 +14,7 @@
 html, body
   font-family: Lato, Verdana, Arial, Roboto, "Droid Sans", "游ゴシック", YuGothic, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif
   font-size: 16px
-  letter-spacing: 0.04em
+  letter-spacing: .02em
 
 a
   text-decoration: none
@@ -46,6 +46,7 @@ a
   &__createdAt
     color: $gray400
     font-size: .75rem
+    letter-spacing: .04em
     margin: 0 0 0 8px
 
 .PostHeader
@@ -54,7 +55,7 @@ a
     font-size: 3rem
     font-weight: 400
   &__createdAt
-    font-size: 0.88rem
+    font-size: .88rem
 
 //-------------------------------
 // MarkDown
